--- a/main_app/static/css/form.css
+++ b/main_app/static/css/form.css
@@ -1,6 +1,6 @@
 section {
-  min-height: 60%;
-  width: 60%;
+  height: 60vh;
+  width: 60vw;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -9,8 +9,8 @@ section {
 }
 
 .create-form {
-  min-height: 60%;
-  width: 90%;
+  height: 60vh;
+  width: 90vw;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -22,24 +22,26 @@ section {
 }
 
 .create-form h1 {
-  width: 65%;
+  width: 65vw;
   color:rgb(4, 14, 70);
   font-family: "Kaushan Script";
-  font-size: 3.5rem;
+  font-size: 5vw;
   font-weight: bolder;
-  margin-left: 70%;
-  margin-bottom: 3%;
-  margin-top: -1%;
+  margin-left: 70vw; /*COME BACK TO THIS*/
+  margin-top: -5vh;
+  position: absolute;
 }
 
 .create-form table {
   display: flex;
   flex-direction: column;
-  width: 60%;
-  margin-left: 50%;
+  width: 60vw;
+  margin-left: 50vw;
   color: rgb(47, 6, 65);
-  font-size: 1rem;
+  font-size: 2vw;
   font-family: "Metal";
+  position: absolute;
+  margin-top: 10vh;
 }
 
 th {
@@ -70,8 +72,8 @@ th {
 }
 
 .clear1 {
-  min-height: 60%;
-  width: 60%;
+  height: 60vh;
+  width: 60vw;
   bottom: 20%;
   background: url("https://i.imgur.com/XqRehBY.jpg") no-repeat, center;
   background-size: cover;
@@ -84,7 +86,7 @@ th {
 }
 
 .glass3 {
-  min-height: 100%;
+  height: 100%;
   width: 100%;
   background: linear-gradient(to top, rgba(255,255,255,0.8), rgba(255,255,255,0.4));
   background-size: cover;
