--- a/main_app/static/css/home.css
+++ b/main_app/static/css/home.css
@@ -1,6 +1,6 @@
 section {
-  min-height: 60%;
-  width: 60%;
+  height: 60vh;
+  width: 60vw;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -9,52 +9,57 @@ section {
 }
 
 .login {
-  min-height: 60%;
-  width: 60%;
+  height: 60vh;
+  width: 60vw;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
   z-index: 3;
-  margin-top: 5%;
-  margin-left: -45%;
+  margin-top: 5vh;
+  margin-left: -45vw;
   position: absolute;
 }
 
 .login h1 {
   color:rgb(4, 14, 70);
   font-family: "Kaushan Script";
-  font-size: 4rem;
+  font-size: 4vw;
   font-weight: bolder;
+  margin-top: -5vh;
+  margin-left: 45vw;
 }
 
 .login  p {
   display: flex;
   flex-direction: column;
-  width: 60%;
-  margin-left: 50%;
+  width: 60vw;
+  margin-top: -3vh;
+  margin-left: 50vw;
   color: rgb(47, 6, 65);
-  font-size: 2rem;
+  font-size: 2vw;
   font-family: "Metal";
 }
 
 .login input {
-  width: 100px;
+  width: 5vw;
   transition: width 0.8s ease-in-out;
   background-color: rgba(255,255,255,0);
   border: none;
   box-shadow: 0px 5px 15px -5px white;
   font-weight: 1200;
+  margin-bottom: 10vh;
 }
 
 .login input:focus {
-  width: 65%;
+  width: 15vw;
   outline: none;
 }
 
 .login .btn {
-  margin-top: 5%;
-  font-size: 2.5rem;
+  margin-top: 40vh;
+  margin-left: 70vh;
+  font-size: 2vw;
   color: rgb(199, 12, 115);
   font-family: "Metal";
   background-color: rgba(255,255,255,0);
@@ -62,11 +67,12 @@ section {
   border-radius: 25px;
   box-shadow: 0px 5px 15px -5px white;
   font-weight: bolder;
+  position: absolute;
 }
 
 #id_username {
   font-family: "Metal";
-  font-size: 1rem;
+  font-size: 1vw;
   font-weight: bolder;
   color: rgb(2, 43, 15);
 }
